--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,18 +138,91 @@ table {
   font-family: "Lato", sans-serif;
 }
 
+body {
+  padding: 0 2rem;
+}
+@media screen and (max-width: 768px) {
+  body {
+    padding: 0 1rem;
+  }
+}
+
+body > form,
+body > header,
+body > div,
+body > section {
+  max-width: 1240px;
+}
+
 header {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  margin: 2.625rem 0 1rem;
+  gap: 0.4rem;
+  margin: 2.6rem auto 1.2rem;
+  text-align: center;
+}
+header svg {
+  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+}
+@media screen and (max-width: 768px) {
+  header svg {
+    width: 4.4rem;
+    height: 4.4rem;
+  }
+}
+
+form.search-bar {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: start;
+  align-items: center;
+  border-radius: 0.3rem;
+  height: 4rem;
+  margin: 0 auto 1.6rem;
+  background-color: #e7e7e7;
+}
+form.search-bar input {
+  border-radius: 0.3rem;
+  height: 100%;
+  flex-grow: 2;
+  border: none;
+  background-color: #e7e7e7;
+  padding: 0 1rem;
+  font-family: "Lato", sans-serif;
+  vertical-align: bottom;
+  font-size: 1.125rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+form.search-bar input::placeholder {
+  opacity: 0.5;
+}
+form.search-bar svg {
+  width: 2.2rem;
+  height: 2.2rem;
+  min-width: 2.2rem;
+  margin: 0 1rem;
 }
 
 h1 {
   font-family: "DM Sans", sans-serif;
   font-size: 2.25rem;
   color: #d04f4f;
+}
+@media screen and (max-width: 768px) {
+  h1 {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
