--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -4,8 +4,69 @@
   font-family: "Lato", sans-serif;
 }
 
+body {
+  padding: 0 2rem;
+
+  @media screen and (max-width: 768px) {
+    padding: 0 1rem;
+  }
+}
+
+body > form,
+body > header,
+body > div,
+body > section {
+  max-width: 1240px;
+}
+
 header {
   @include flex(column);
-  @include XY(center, center);
-  margin: 2.625rem 0 1rem;
+  @include j-cA-i(center, center);
+  gap: 0.4rem;
+  margin: 2.6rem auto 1.2rem;
+  text-align: center;
+
+  & svg {
+    transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+    @media screen and (max-width: 768px) {
+      width: 4.4rem;
+      height: 4.4rem;
+    }
+  }
+}
+
+form.search-bar {
+  @include flex;
+  @include j-cA-i(start, center);
+  @include b-r;
+  height: 4rem;
+  margin: 0 auto 1.6rem;
+  background-color: $grey;
+
+  & input {
+    @include b-r;
+    height: 100%;
+    flex-grow: 2;
+    border: none;
+    background-color: $grey;
+    padding: 0 1rem;
+
+    font-family: "Lato", sans-serif;
+    vertical-align: bottom;
+    font-size: 1.125rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    &::placeholder {
+      opacity: 0.5;
+    }
+  }
+
+  & svg {
+    width: 2.2rem;
+    height: 2.2rem;
+    min-width: 2.2rem;
+    margin: 0 1rem;
+  }
 }
