--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -2,4 +2,15 @@ h1 {
   font-family: "DM Sans", sans-serif;
   font-size: 2.25rem;
   color: $logo;
+
+  @media screen and (max-width: 768px) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
 }
