--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,38 +173,19 @@ header svg {
   }
 }
 
-form.search-bar {
+.filter-division {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: start;
-  align-items: center;
-  border-radius: 0.3rem;
-  height: 4rem;
-  margin: 0 auto 1.6rem;
-  background-color: #e7e7e7;
-}
-form.search-bar input {
-  border-radius: 0.3rem;
-  height: 100%;
-  flex-grow: 2;
-  border: none;
-  background-color: #e7e7e7;
-  padding: 0 1rem;
-  font-family: "Lato", sans-serif;
-  vertical-align: bottom;
+  gap: 1rem;
+  margin: 0 auto 1.2rem;
+  color: white;
   font-size: 1.125rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
-form.search-bar input::placeholder {
-  opacity: 0.5;
-}
-form.search-bar svg {
-  width: 2.2rem;
-  height: 2.2rem;
-  min-width: 2.2rem;
-  margin: 0 1rem;
+@media screen and (max-width: 768px) {
+  .filter-division {
+    display: flex;
+    flex-flow: row wrap;
+  }
 }
 
 h1 {
@@ -228,32 +209,115 @@ h1 {
 .listbox-container {
   display: flex;
   flex-flow: column nowrap;
-  max-width: 1240px;
+  border-radius: 0.3rem;
+  width: fit-content;
+  min-width: 170px;
+  max-width: 650px;
+  height: fit-content;
+  max-height: 400px;
+}
+@media screen and (max-width: 768px) {
+  .listbox-container {
+    width: 100%;
+    max-width: none;
+  }
+}
+.listbox-container > div:first-child {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.listbox-container > div:first-child span {
+  font-weight: 700;
+  padding: 1rem;
+  cursor: pointer;
+}
+.listbox-container > div:first-child i {
+  transition: transform 0.2s ease-out;
+  padding: 1rem;
+}
+.listbox-container input {
+  border-radius: 0.3rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+  padding: 1rem;
+  width: 100%;
+  border: none;
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 1.125rem;
+}
+.listbox-container input::placeholder {
+  color: white;
+  opacity: 0.5;
+}
+.listbox-container:first-of-type {
+  background-color: #3282f7;
+}
+.listbox-container:first-of-type input {
+  background-color: #3282f7;
+}
+.listbox-container:nth-of-type(2) {
+  background-color: #68d9a4;
+}
+.listbox-container:nth-of-type(2) input {
+  background-color: #68d9a4;
+}
+.listbox-container:last-of-type {
+  background-color: #ed6454;
+}
+.listbox-container:last-of-type input {
+  background-color: #ed6454;
 }
 
-.listbox {
-  position: relative;
+ul {
   display: flex;
-  flex-flow: column nowrap;
-  width: 100%;
-}
-.listbox svg {
-  height: 0.8rem;
-  fill: black;
-  position: absolute;
-  top: 0.225rem;
-  right: 0.4rem;
-  transition: transform 0.2s ease-out;
+  flex-flow: column wrap;
+  gap: 0.5rem;
 }
 
 .option {
   display: none;
   cursor: pointer;
   user-select: none;
-  color: grey;
+  padding: 0 1rem;
+}
+.option:first-child {
+  margin-top: 1rem;
 }
 .option:last-child {
-  margin-bottom: 0;
+  margin-bottom: 1rem;
+}
+
+form.search-bar {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: start;
+  align-items: center;
+  border-radius: 0.3rem;
+  height: 4rem;
+  margin: 0 auto 1.6rem;
+  background-color: #e7e7e7;
+}
+form.search-bar input {
+  border-radius: 0.3rem;
+  height: 100%;
+  flex-grow: 2;
+  border: none;
+  background-color: #e7e7e7;
+  padding: 0 1rem;
+  font-family: "Lato", sans-serif;
+  font-size: 1.125rem;
+}
+form.search-bar svg {
+  width: 2.2rem;
+  height: 2.2rem;
+  min-width: 2.2rem;
+  margin: 0 1rem;
 }
 
 .u-turn {
