--- a/stylesheets/_mixins.scss
+++ b/stylesheets/_mixins.scss
@@ -11,3 +11,9 @@
 @mixin b-r() {
   border-radius: 0.3rem;
 }
+
+@mixin ellipsis() {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
