--- a/stylesheets/components/_listbox.scss
+++ b/stylesheets/components/_listbox.scss
@@ -67,11 +67,11 @@
       background-color: $orange;
     }
   }
-}
 
-ul {
-  @include flex(column, wrap);
-  gap: 0.5rem;
+  ul {
+    @include flex(column, wrap);
+    gap: 0.5rem;
+  }
 }
 
 .option {
@@ -86,5 +86,9 @@ ul {
 
   &:last-child {
     margin-bottom: 1rem;
+  }
+
+  &.displayed {
+    display: block;
   }
 }
