--- a/stylesheets/layout/_filters.scss
+++ b/stylesheets/layout/_filters.scss
@@ -1,11 +1,25 @@
-.filters {
-  @include flex(row, nowrap);
-  gap: 1rem;
+.filters-container {
   margin: 0 auto 1.2rem;
-  color: white;
-  font-size: 1.125rem;
+  position: relative;
+
+  height: 50px;
 
   @media screen and (max-width: 768px) {
+    height: fit-content;
+  }
+}
+
+.filters {
+  position: absolute;
+
+  @include flex(row, wrap);
+  gap: 1rem;
+  color: white;
+  font-size: 1.125rem;
+  width: 100%;
+
+  @media screen and (max-width: 768px) {
+    position: static;
     @include flex(row, wrap);
   }
 }
