--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,6 +141,7 @@ table {
 
 body {
   padding: 0 2rem;
+  overflow-x: hidden;
 }
 @media screen and (max-width: 768px) {
   body {
@@ -207,8 +208,15 @@ header svg {
   }
 }
 
+.tags {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0 auto;
+  gap: 0.5rem;
+}
+
 .filters-container {
-  margin: 0 auto 1.2rem;
+  margin: 0 auto 1.6rem;
   position: relative;
   height: 50px;
 }
@@ -355,24 +363,6 @@ header svg {
   color: white;
   opacity: 0.5;
 }
-.listbox-container:first-of-type {
-  background-color: #3282f7;
-}
-.listbox-container:first-of-type input {
-  background-color: #3282f7;
-}
-.listbox-container:nth-of-type(2) {
-  background-color: #68d9a4;
-}
-.listbox-container:nth-of-type(2) input {
-  background-color: #68d9a4;
-}
-.listbox-container:last-of-type {
-  background-color: #ed6454;
-}
-.listbox-container:last-of-type input {
-  background-color: #ed6454;
-}
 .listbox-container ul {
   display: flex;
   flex-flow: column wrap;
@@ -420,6 +410,25 @@ form.search-bar svg {
   height: 2.2rem;
   min-width: 2.2rem;
   margin: 0 1rem;
+}
+
+.tag {
+  display: flex;
+  flex-flow: row nowrap;
+  border-radius: 0.3rem;
+  gap: 0.5rem;
+  width: fit-content;
+  height: min-content;
+  background-color: #e7e7e7;
+  cursor: pointer;
+  padding: 0.5rem;
+  color: white;
+  font-size: 0.875rem;
+  font-weight: 700;
+  white-space: nowrap;
+}
+.tag:last-child {
+  margin-bottom: 0.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
