--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -6,6 +6,6 @@
 
 @import "base/base", "base/fonts", "base/typography", "base/helpers";
 
-@import "layout/header", "layout/filters", "layout/gallery";
+@import "layout/header", "layout/tags", "layout/filters", "layout/gallery";
 
-@import "components/card", "components/listbox", "components/search-bar";
+@import "components/card", "components/listbox", "components/search-bar", "components/tag";
