fixes listboxes css rules.

--- a/stylesheets/components/_card.scss
+++ b/stylesheets/components/_card.scss
@@ -29,6 +29,7 @@
     @include flex;
     justify-content: space-between;
     font-size: 1.125rem;
+    line-height: 1.2;
     font-weight: 700;
     margin-bottom: 1.25rem;
     white-space: nowrap;
