--- a/public/css/style.css
+++ b/public/css/style.css
@@ -282,6 +282,7 @@ header svg {
   flex-flow: row nowrap;
   justify-content: space-between;
   font-size: 1.125rem;
+  line-height: 1.2;
   font-weight: 700;
   margin-bottom: 1.25rem;
   white-space: nowrap;
@@ -320,9 +321,7 @@ header svg {
   border-radius: 0.3rem;
   width: fit-content;
   min-width: 170px;
-  max-width: 650px;
   height: fit-content;
-  max-height: 400px;
 }
 @media screen and (max-width: 768px) {
   .listbox-container {
@@ -364,25 +363,26 @@ header svg {
   opacity: 0.5;
 }
 .listbox-container ul {
-  display: flex;
-  flex-flow: column wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  overflow-y: auto;
   gap: 0.5rem;
+  max-width: 650px;
+  max-height: 350px;
+  margin: 0.5rem 0 1rem;
+}
+.listbox-container ul.not-displayed {
+  display: none;
 }
 
 .option {
-  display: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   cursor: pointer;
   user-select: none;
   padding: 0 1rem;
-}
-.option:first-child {
-  margin-top: 1rem;
-}
-.option:last-child {
-  margin-bottom: 1rem;
-}
-.option.displayed {
-  display: block;
+  line-height: 1.5;
 }
 
 form.search-bar {
