--- a/stylesheets/base/_helpers.scss
+++ b/stylesheets/base/_helpers.scss
@@ -2,6 +2,10 @@
   transform: rotate(180deg);
 }
 
+.box-shadow {
+  box-shadow: 2px 2px 5px rgba(#000000, 0.2);
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
