--- a/stylesheets/components/_search-bar.scss
+++ b/stylesheets/components/_search-bar.scss
@@ -19,10 +19,18 @@ form.search-bar {
     font-size: 1.125rem;
   }
 
+  & button {
+    width: fit-content;
+    height: fit-content;
+    background-color: rgba(#000000, 0);
+    border: none;
+    margin: 0 1rem;
+    padding: 0;
+  }
+
   & svg {
     width: 2.2rem;
     height: 2.2rem;
     min-width: 2.2rem;
-    margin: 0 1rem;
   }
 }
