--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,7 +233,7 @@ header svg {
 .filters {
   position: absolute;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   gap: 1rem;
   color: white;
   font-size: 1.125rem;
