--- a/stylesheets/layout/_filters.scss
+++ b/stylesheets/layout/_filters.scss
@@ -12,7 +12,7 @@
 .filters {
   position: absolute;
 
-  @include flex(row, wrap);
+  @include flex(row, nowrap);
   gap: 1rem;
   color: white;
   font-size: 1.125rem;
