Replaces 'match' methods by 'includes' ones into the 'search' function algorithms.

--- a/stylesheets/components/_listbox.scss
+++ b/stylesheets/components/_listbox.scss
@@ -68,6 +68,9 @@
     &::-webkit-scrollbar-thumb {
       /* Foreground */
       background: rgba(white, 0.2);
+      &:hover {
+        background: rgba(white, 0.5);
+      }
     }
   }
 }
