--- a/public/css/style.css
+++ b/public/css/style.css
@@ -392,6 +392,9 @@ header svg {
   /* Foreground */
   background: rgba(255, 255, 255, 0.2);
 }
+.listbox-container ul::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
 
 .option {
   overflow: hidden;
