--- a/stylesheets/layout/_gallery.scss
+++ b/stylesheets/layout/_gallery.scss
@@ -2,4 +2,9 @@
   @include flex(row, wrap);
   margin: 0 auto 1.6rem;
   gap: 50px;
+
+  & > p {
+    margin: auto;
+    text-align: center;
+  }
 }
