--- a/public/css/style.css
+++ b/public/css/style.css
@@ -408,12 +408,13 @@ header svg {
   user-select: none;
   padding: 0 1rem;
   line-height: 1.5;
+  height: 1.5rem;
 }
 
 form.search-bar {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   border-radius: 0.3rem;
   height: 4rem;
